tests/ui/type/pattern_types/range_patterns_trait_impls2.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/range_patterns_trait_impls2.rs:13:1
   |
LL | impl Eq for Y {}
   | ^^^^^^^^^^^^-
   | |           |
   | |           `(u32) is 1..=` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0117`.
